# Retrieval-based-Voice-Conversion-WebUI

./: .dockerignore  .env  .env.example  .env.training  .gitignore  .python-version  AGENT.md  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Changelog_CN.md  Changelog_EN.md  Changelog_KO.md  Dockerfile  Dockerfile.mac  Dockerfile.production  Dockerfile.runpod  Dockerfile.training  FIX_WINDOWS_PYTHON_ALIAS.md  Juk  LICENSE  Loca glekko  MDXNet.py  MITライセンスおよび関連ライブラリライセンス  MIT协议暨相关引用库协议  Nervy  PYTHON_INSTALLATION_GUIDE_CN.md  README.en.md  README.ja.md  README.md  README_en.md  RVC改进意见.txt  Retrieval_based_Voice_Conversion_WebUI.ipynb  Retrieval_based_Voice_Conversion_WebUI_v2.ipynb  THIRD_PARTY_NOTICES.md  TROUBLESHOOTING_CN.md  _in_rvc_train  _run_train.py  _svc_in  agent.md  (+111 more)
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: black.yml  black_PR.yml  checksum.yml  docker.yml  genlocale.yml  pull_format.yml  push_format.yml  sync_dev.yml  unitest.yml
assets/: Synthesizer_inputs.pth
assets/hubert/: .gitignore  hubert_inputs.pth
assets/pymss_weights/: config_mel_band_roformer_karaoke.yaml  dereverb_mel_band_roformer_anvuew.yaml  model_bs_roformer_ep_317_sdr_12.9755.yaml  model_bs_roformer_ep_368_sdr_12.9628.yaml
assets/requirements/: requirements-amd.txt
assets/rmvpe/: .gitignore  rmvpe_inputs.pth
configs/: 32k_v2.json  48k.json  48k_v2.json  __init__.py  config.json  config.py
configs/inuse/: .gitignore
configs/v1/: 32k.json  40k.json  48k.json
configs/v2/: 32k.json  48k.json  48k_pre_m1.json
datasets/: README.md
docs/: Changelog_CN.md  Changelog_EN.md  Changelog_KO.md  README.en.md  README.ja.md  README.ko.han.md  README.ko.md  README.tr.md  datasets_japanese_singing.md  evaluation_report_m0_m1.md  faiss_tips_en.md  faiss_tips_ja.md  faq.md  faq_en.md  milestones.md  proposal_data_strategy.md  proposal_segment_length_architecture.md  proposal_vocoder_decoder_improvements.md  proposals_summary.md  requirements_japanese_singing_vc.md  research_japanese_singing_vc.md  research_ssl_models_update.md  training_tips_en.md  training_tips_ja.md  training_tips_ko.md  training_tips_tr.md  小白简易教程.doc
docs/cn/: Changelog_CN.md  README.cn.md  faq.md
docs/en/: Changelog_EN.md  README.en.md  faq_en.md  training_tips_en.md
docs/fr/: Changelog_FR.md  README.fr.md  faiss_tips_fr.md  faq_fr.md  training_tips_fr.md
docs/id/: README.id.md
docs/jp/: Changelog_JA.md  README.ja.md  faiss_tips_ja.md  faq_ja.md  training_tips_ja.md
docs/kr/: Changelog_KO.md  README.ko.han.md  README.ko.md  faiss_tips_ko.md  faq_ko.md
docs/pt/: Changelog_pt.md  README.pt.md  faq_pt.md  training_tips_pt.md
docs/pt-BR/: README.pt-BR.md  faiss_tips_BR.md
docs/tickets/: M0_evaluation_infrastructure.md  M1_immediate_improvements.md  M2A_ssl_model_integration.md  M2B_pretrain_japanese_singing.md  M3A_loss_function_improvements.md  M3B_vocoder_improvements.md  M4_advanced_optimization.md  README.md
docs/tr/: Changelog_TR.md  README.tr.md  faiss_tips_tr.md  faq_tr.md  training_tips_tr.md
docs/tw/: README.tw.md
electron/: main.js  package-lock.json  package.json  preload.js
electron/renderer/: app.js  index.html  style.css
eval_output/: baseline_e200.json  baseline_e50.json  baseline_e50_cer.json
hooks/: build
i18n/: en_US.json  es_ES.json  i18n.py  it_IT.json  ja_JP.json  locale_diff.py  ru-RU.json  scan_i18n.py  tr_TR.json  zh_CN.json  zh_HK.json  zh_SG.json  zh_TW.json
i18n/locale/: en_US.json  es_ES.json  fr_FR.json  it_IT.json  ja_JP.json  ko_KR.json  pt_BR.json  ru_RU.json  scan_i18n.py  tr_TR.json  zh_CN.json  zh_HK.json  zh_SG.json  zh_TW.json
infer/: audio.py  fcpe.py  hubert.py  infer-pm-index256.py  rmvpe.py  rtrvc.py  train-index -v2.py  train-index.py  trans_weights.py
infer/lib/: audio.py  f0_presets.py  rmvpe.py  rtrvc.py  rvcmd.py  slicer2.py
infer/module/: attentions.py  commons.py  models.py  modules.py  (+1 more)
infer_pack/: attentions.py  commons.py  models.py  models_onnx.py  models_onnx_moess.py  models_onnx_old.py  modules.py  onnx_inference.py  transforms.py
infer_web_ui/: gradio_tools.py  utils.py
language/: language_gui.py
lib/: audio.py  hubert.py  rmvpe.py  synthesizer.py
locale/: en_US.json  extract_locale.py  ja_JP.json  locale_diff.py  zh_CN.json  zh_SG.json  zh_TW.json
output/: .gitignore
rocm_5.4/: Dockerfile.base_rocm5.4_source_compile  Dockerfile.rvc_original  README.md  README.md.backup  entrypoint_rvc.sh
src/: configuration.py  utils.py
sway/: model_info.py  unpack_model.py
tabs/: ckpt_processing_tab.py  inference_tab.py  onnx_tab.py  train_tab.py
test/: test_my_utils.py
tests/: model_construct.py  pipeline_equiv.py  smoke_imports.py  webui_build.py
tools/: app.py  audio_io_process.py  audio_preprocessor.py  calc_rvc_model_similarity.py  cuda_graph.py  dlmodels.bat  dlmodels.sh  dlmodels_runpod.sh  download_data_from_s3.py  download_datasets.py  download_models.py  download_models_retry.py  export_onnx.py  file_io.py  infer.sh  infer_batch_rvc.py  infer_cli.py  mkdir_runpod.sh  onnx_inference_demo.py  prestart_runpod.sh  process_utils.py  progress.py  pymss_webui.py  run_experiments_batch.py  rvc_for_realtime copy.py  rvc_for_realtime.py  test_grid.py  train_batch.py
train/: data_utils.py  losses.py  mel_processing.py  preprocess.py  process_ckpt.py  train.py  train_index.py  utils.py
uvr5_pack/: name_params.json  utils.py
web/: app.py  runtime.py  train_ops.py
(+324 files in other folders)
