[project]
name = "rvc-beta"
version = "0.1.0"
description = "RVC WebUI - VITSベースの音声変換フレームワーク"
authors = [{name = "lj1995"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    # コア
    "numba>=0.61.0",
    "numpy>=2.0.0",
    "scipy>=1.15.0",
    "librosa>=0.11.0",
    "faiss-cpu>=1.8.0",
    "Cython>=3.0.11",

    # 音声処理
    "pydub>=0.25.1",
    "soundfile>=0.12.1",
    "ffmpeg-python>=0.2.0",
    "praat-parselmouth>=0.4.2",
    "pyworld>=0.3.4",
    "resampy>=0.4.2",
    "av>=12.3.0",
    "noisereduce>=2.0.0",

    # 機械学習
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "scikit-learn>=1.5.0",
    "tensorboard>=2.17.0",
    "torchcrepe==0.0.24",
    "torchfcpe>=0.0.4",
    "onnxruntime-gpu>=1.18.0",
    "fairseq>=0.12.2",

    # WebUI
    "gradio>=5.0.0",
    "Jinja2>=3.1.2",

    # リアルタイムGUI
    "FreeSimpleGUI>=5.0.0",
    "sounddevice>=0.5.0",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "einops>=0.6.0",
    "local-attention>=1.0.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "httpx>=0.27.0",

    # ユーティリティ
    "matplotlib>=3.7.0",
    "Pillow>=10.0.0",
    "tqdm>=4.63.1",
    "PyYAML>=6.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["infer", "configs"]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [{index = "pytorch-cu126"}]
torchvision = [{index = "pytorch-cu126"}]
torchaudio = [{index = "pytorch-cu126"}]
fairseq = {git = "https://github.com/One-sixth/fairseq.git"}
